--- a/privacy.html
+++ b/privacy.html
@@ -1,58 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Privacy Policy - Chuyển Động Crypto</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; color: #222; }
-    h1, h2 { color: #000; }
-    hr { margin: 30px 0; }
-    footer { margin-top: 40px; font-size: 0.9em; color: #555; }
-  </style>
+  <meta charset="utf-8">
+  <title>Chính sách quyền riêng tư - Chuyển Động Crypto</title>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
-  <p><strong>Effective Date:</strong> October 2025</p>
-
-  <p>At <strong>Chuyển Động Crypto</strong>, your privacy is important to us. This policy explains how we handle user data in connection with our automated video publishing system integrated with TikTok APIs.</p>
-
-  <h2>1. Data We Collect</h2>
-  <p>When you authorize with TikTok, we receive limited data such as your TikTok user ID and OAuth2 access token. No additional personal information is collected.</p>
-
-  <h2>2. How We Use Your Data</h2>
-  <p>Access tokens are used exclusively for uploading and publishing videos. We do not sell, share, or analyze personal data.</p>
-
-  <h2>3. Data Retention</h2>
-  <p>Tokens are stored temporarily in encrypted form and deleted automatically when expired or revoked.</p>
-
-  <h2>4. Security</h2>
-  <p>All communications use HTTPS and secure TikTok Open APIs.</p>
-
-  <h2>5. Contact</h2>
-  <p>Email: <a href="mailto:chuyendongcrypto6886@gmail.com">chuyendongcrypto6886@gmail.com</a></p>
-
-  <hr>
-  <h1>Chính Sách Bảo Mật</h1>
-  <p><strong>Ngày hiệu lực:</strong> Tháng 10, 2025</p>
-
-  <p>Tại <strong>Chuyển Động Crypto</strong>, chúng tôi tôn trọng quyền riêng tư của bạn. Chính sách này mô tả cách chúng tôi xử lý dữ liệu người dùng liên quan đến hệ thống tự động đăng tải video tích hợp với TikTok API.</p>
-
-  <h2>1. Dữ liệu được thu thập</h2>
-  <p>Khi bạn cấp quyền TikTok, chúng tôi chỉ nhận ID người dùng TikTok và mã token truy cập OAuth2. Không thu thập thêm thông tin cá nhân khác.</p>
-
-  <h2>2. Cách sử dụng dữ liệu</h2>
-  <p>Các token chỉ được dùng cho việc đăng tải video và không được chia sẻ, bán hoặc phân tích cho mục đích khác.</p>
-
-  <h2>3. Thời gian lưu trữ</h2>
-  <p>Các token được lưu tạm thời ở dạng mã hóa và tự động xóa khi hết hạn.</p>
-
-  <h2>4. Bảo mật</h2>
-  <p>Tất cả kết nối đều qua giao thức HTTPS và sử dụng API chính thức của TikTok để đảm bảo an toàn.</p>
-
-  <h2>5. Liên hệ</h2>
-  <p>Email: <a href="mailto:chuyendongcrypto6886@gmail.com">chuyendongcrypto6886@gmail.com</a></p>
-
-  <footer>© 2025 Chuyển Động Crypto</footer>
+  <h2>Chính sách quyền riêng tư</h2>
+  <p>Ứng dụng này chỉ sử dụng dữ liệu để đăng bài tự động lên Trang Facebook của người dùng. 
+  Không thu thập, lưu trữ hay chia sẻ thông tin cá nhân nào khác.</p>
+  <p>Liên hệ: <a href="mailto:chuyendongcrypto6886@gmail.com">chuyendongcrypto6886@gmail.com</a></p>
 </body>
 </html>
