--- a/privacy.html
+++ b/privacy.html
@@ -2,12 +2,37 @@
 <html lang="vi">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Chính sách quyền riêng tư - Chuyển Động Crypto</title>
 </head>
-<body>
-  <h2>Chính sách quyền riêng tư</h2>
-  <p>Ứng dụng này chỉ sử dụng dữ liệu để đăng bài tự động lên Trang Facebook của người dùng. 
-  Không thu thập, lưu trữ hay chia sẻ thông tin cá nhân nào khác.</p>
-  <p>Liên hệ: <a href="mailto:chuyendongcrypto6886@gmail.com">chuyendongcrypto6886@gmail.com</a></p>
+<body style="font-family: Arial, sans-serif; margin: 40px; line-height: 1.6;">
+  <h1>Chính sách quyền riêng tư</h1>
+  <p><strong>Cập nhật lần cuối:</strong> 25/10/2025</p>
+
+  <p>Ứng dụng <strong>Chuyển Động Crypto Auto Post</strong> được phát triển nhằm tự động hóa việc đăng tải tin tức, hình ảnh và nội dung lên Trang Facebook do người dùng quản lý.</p>
+
+  <h3>1. Dữ liệu được thu thập</h3>
+  <p>Ứng dụng chỉ truy cập vào dữ liệu cơ bản cần thiết do người dùng ủy quyền, bao gồm:</p>
+  <ul>
+    <li>Tên và ID Trang Facebook bạn quản lý</li>
+    <li>Quyền đăng bài, đọc tương tác, và quản lý nội dung</li>
+  </ul>
+
+  <h3>2. Cách sử dụng dữ liệu</h3>
+  <p>Dữ liệu được sử dụng duy nhất cho mục đích:</p>
+  <ul>
+    <li>Tự động đăng bài lên Trang Facebook của bạn thông qua API chính thức của Meta</li>
+    <li>Không chia sẻ, bán hoặc sử dụng dữ liệu cho mục đích thương mại khác</li>
+  </ul>
+
+  <h3>3. Bảo mật thông tin</h3>
+  <p>Ứng dụng không lưu trữ dữ liệu người dùng trên máy chủ. Mọi quyền truy cập đều được xác thực trực tiếp qua hệ thống của Facebook.</p>
+
+  <h3>4. Liên hệ</h3>
+  <p>Nếu bạn có bất kỳ câu hỏi hoặc yêu cầu nào liên quan đến chính sách này, vui lòng liên hệ qua email:  
+  <a href="mailto:chuyendongcrypto6886@gmail.com">chuyendongcrypto6886@gmail.com</a></p>
+
+  <hr>
+  <p>© 2025 Chuyển Động Crypto. Mọi quyền được bảo lưu.</p>
 </body>
 </html>
