--- a/terms.html
+++ b/terms.html
@@ -1,58 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Terms of Service - Chuyển Động Crypto</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; color: #222; }
-    h1, h2 { color: #000; }
-    hr { margin: 30px 0; }
-    footer { margin-top: 40px; font-size: 0.9em; color: #555; }
-  </style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Điều khoản sử dụng - Chuyển Động Crypto</title>
 </head>
-<body>
-  <h1>Terms of Service</h1>
-  <p><strong>Effective Date:</strong> October 2025</p>
+<body style="font-family: Arial, sans-serif; margin: 40px; line-height: 1.6;">
+  <h1>Điều khoản sử dụng</h1>
+  <p><strong>Cập nhật lần cuối:</strong> 25/10/2025</p>
 
-  <p>Welcome to <strong>Chuyển Động Crypto</strong> (“we,” “our,” or “us”). These Terms of Service govern your use of our automated content system, including integrations with TikTok, YouTube, or Facebook for publishing educational content about cryptocurrency and technology.</p>
+  <p>Bằng cách sử dụng ứng dụng <strong>Chuyển Động Crypto Auto Post</strong>, bạn đồng ý tuân thủ các điều khoản dưới đây.</p>
 
-  <h2>1. Use of Service</h2>
-  <p>Our system allows authorized users to automatically upload and publish approved videos via secure API integration. Users are responsible for ensuring that all uploaded content complies with TikTok’s Community Guidelines and applicable laws.</p>
+  <h3>1. Mục đích sử dụng</h3>
+  <p>Ứng dụng được cung cấp nhằm tự động hóa việc đăng tin tức, hình ảnh và nội dung hợp pháp lên Trang Facebook do bạn quản lý. Người dùng chịu trách nhiệm về nội dung được đăng tải.</p>
 
-  <h2>2. Content Ownership</h2>
-  <p>All uploaded videos remain the property of their respective creators. We do not claim ownership or redistribute your content outside your intended channels.</p>
+  <h3>2. Quyền sở hữu</h3>
+  <p>Ứng dụng thuộc sở hữu của nhóm phát triển <strong>Chuyển Động Crypto</strong>. Việc sao chép, phân phối hoặc chỉnh sửa ứng dụng khi chưa có sự đồng ý là vi phạm bản quyền.</p>
 
-  <h2>3. Data Security</h2>
-  <p>We temporarily store access tokens in encrypted form for API publishing purposes only. No permanent data storage occurs on our servers.</p>
+  <h3>3. Giới hạn trách nhiệm</h3>
+  <p>Nhóm phát triển không chịu trách nhiệm về bất kỳ thiệt hại hoặc vi phạm nào do người dùng đăng tải nội dung sai phạm, vi phạm chính sách của Facebook hoặc pháp luật hiện hành.</p>
 
-  <h2>4. Limitation of Liability</h2>
-  <p>We are not responsible for penalties or account restrictions due to content policy violations on third-party platforms.</p>
+  <h3>4. Thay đổi điều khoản</h3>
+  <p>Nhóm phát triển có quyền cập nhật, sửa đổi hoặc bổ sung điều khoản mà không cần thông báo trước. Người dùng được khuyến nghị xem lại định kỳ.</p>
 
-  <h2>5. Contact</h2>
-  <p>Email: <a href="mailto:chuyendongcrypto6886@gmail.com">chuyendongcrypto6886@gmail.com</a></p>
+  <h3>5. Liên hệ</h3>
+  <p>Mọi thắc mắc hoặc yêu cầu hỗ trợ vui lòng liên hệ:  
+  <a href="mailto:chuyendongcrypto@gmail.com">chuyendongcrypto@gmail.com</a></p>
 
   <hr>
-  <h1>Điều Khoản Dịch Vụ</h1>
-  <p><strong>Ngày hiệu lực:</strong> Tháng 10, 2025</p>
-
-  <p>Chào mừng bạn đến với <strong>Chuyển Động Crypto</strong>. Các điều khoản này quy định việc bạn sử dụng hệ thống tự động đăng tải video, bao gồm các tích hợp với TikTok, YouTube, Facebook nhằm chia sẻ nội dung giáo dục và thông tin về lĩnh vực tiền điện tử và công nghệ.</p>
-
-  <h2>1. Sử dụng dịch vụ</h2>
-  <p>Người dùng có quyền đăng tải và xuất bản video đã được phê duyệt thông qua kết nối API bảo mật. Bạn chịu trách nhiệm đảm bảo nội dung đăng tải tuân thủ Nguyên tắc Cộng đồng của TikTok và pháp luật hiện hành.</p>
-
-  <h2>2. Quyền sở hữu nội dung</h2>
-  <p>Mọi video được đăng tải vẫn thuộc quyền sở hữu của tác giả. Chúng tôi không yêu cầu quyền sở hữu hoặc sử dụng lại nội dung của bạn.</p>
-
-  <h2>3. Bảo mật dữ liệu</h2>
-  <p>Các token truy cập chỉ được lưu tạm thời, mã hóa và dùng cho mục đích đăng tải video. Không có dữ liệu cá nhân nào được lưu trữ lâu dài.</p>
-
-  <h2>4. Giới hạn trách nhiệm</h2>
-  <p>Chúng tôi không chịu trách nhiệm với các hình phạt hoặc hạn chế tài khoản nếu người dùng vi phạm chính sách nội dung của các nền tảng bên thứ ba.</p>
-
-  <h2>5. Liên hệ</h2>
-  <p>Email: <a href="mailto:chuyendongcrypto6886@gmail.com">chuyendongcrypto6886@gmail.com</a></p>
-
-  <footer>© 2025 Chuyển Động Crypto</footer>
+  <p>© 2025 Chuyển Động Crypto. Mọi quyền được bảo lưu.</p>
 </body>
 </html>
