--- a/terms.html
+++ b/terms.html
@@ -25,7 +25,7 @@
 
   <h3>5. Liên hệ</h3>
   <p>Mọi thắc mắc hoặc yêu cầu hỗ trợ vui lòng liên hệ:  
-  <a href="mailto:chuyendongcrypto@gmail.com">chuyendongcrypto@gmail.com</a></p>
+  <a href="mailto:chuyendongcrypto6886@gmail.com">chuyendongcrypto6886@gmail.com</a></p>
 
   <hr>
   <p>© 2025 Chuyển Động Crypto. Mọi quyền được bảo lưu.</p>
